--- a/index.html
+++ b/index.html
@@ -1010,6 +1010,12 @@
       color:var(--consigne-status-text, #0f172a);
       word-break:break-word;
     }
+    .consigne-row[data-status] {
+      color:var(--consigne-status-text, #0f172a);
+    }
+    .consigne-row[data-status] .consigne-row__title {
+      color:inherit;
+    }
     .consigne-row__meta {
       display:flex;
       align-items:center;
