--- a/index.html
+++ b/index.html
@@ -1241,7 +1241,7 @@
     }
     .consigne-history__item[data-status="na"] {
       --consigne-history-border:rgba(148,163,184,.32);
-      --consigne-history-bg:rgba(226,232,240,.55);
+      --consigne-history-bg:#e2e8f0;
       --consigne-history-text:#0f172a;
       --consigne-history-shadow:rgba(148,163,184,.16);
     }
