--- a/index.html
+++ b/index.html
@@ -1340,6 +1340,9 @@
     .consigne-history__nav[data-consigne-history-prev] {
       left:.35rem;
     }
+    .consigne-history__nav[data-consigne-history-more] {
+      left:2.55rem;
+    }
     .consigne-history__nav[data-consigne-history-next] {
       right:.35rem;
     }
