--- a/index.html
+++ b/index.html
@@ -1341,7 +1341,7 @@
       left:.35rem;
     }
     .consigne-history__nav[data-consigne-history-more] {
-      left:2.55rem;
+      right:2.55rem;
     }
     .consigne-history__nav[data-consigne-history-next] {
       right:.35rem;
