--- a/index.html
+++ b/index.html
@@ -2536,6 +2536,13 @@
                     role="menuitem">
               🗄️ Voir les réponses archivées
             </button>
+            <button type="button"
+                    class="user-actions__item"
+                    id="user-actions-toggle-history"
+                    data-toggle-history-na
+                    role="menuitem">
+              👁️ Masquer les pastilles vides
+            </button>
             <div class="user-actions__separator" role="presentation"></div>
             <button type="button"
                     class="user-actions__item hidden"
