--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
   <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg%20xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20viewBox%3D%270%200%20100%20100%27%20role%3D%27img%27%20aria-label%3D%27Habitudes%20et%20Pratique%27%3E%3Crect%20width%3D%27100%25%27%20height%3D%27100%25%27%20rx%3D%2722%27%20fill%3D%27%233EA6EB%27%2F%3E%3Ctext%20x%3D%2750%25%27%20y%3D%2760%25%27%20text-anchor%3D%27middle%27%20font-family%3D%27%22Segoe%20UI%20Emoji%22%2C%20%22Apple%20Color%20Emoji%22%2C%20%22Noto%20Color%20Emoji%22%2C%20sans-serif%27%20font-size%3D%2748%27%3E%F0%9F%8C%B1%3C%2Ftext%3E%3C%2Fsvg%3E">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="dopamine-animations.css">
 
   <style>
     :root{
@@ -283,9 +284,61 @@
     .install-banner__action:hover,
     .install-banner__action:focus-visible{ text-decoration:underline; outline:none; }
 
-    /* Animation de changement d’onglet */
+    /* Animation de changement d'onglet */
     @keyframes fadeSlideIn{ from{ opacity:0; transform:translateY(6px);} to{ opacity:1; transform:translateY(0);} }
     .route-enter{ animation: fadeSlideIn .25s ease-out; }
+
+    /* Dopamine-enhanced checkbox styles */
+    input[type="checkbox"]:checked {
+      position: relative;
+    }
+    
+    input[type="checkbox"]:checked::after {
+      content: '✓';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #4CAF50;
+      font-weight: bold;
+      font-size: 14px;
+    }
+
+    /* Enhanced button hover states */
+    .btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    /* Micro-interactions for cards */
+    .card:hover {
+      transform: translateY(-4px) scale(1.02);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    /* Pulse animation for important elements */
+    @keyframes gentle-pulse {
+      0%, 100% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.05); opacity: 0.9; }
+    }
+
+    .pulse-on-hover:hover {
+      animation: gentle-pulse 1s infinite;
+    }
+
+    /* Shimmer effect for loading states */
+    @keyframes shimmer {
+      0% { background-position: -200% 0; }
+      100% { background-position: 200% 0; }
+    }
+
+    .shimmer {
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,0.3), transparent);
+      background-size: 200% 100%;
+      animation: shimmer 2s infinite;
+    }
 
     /* Sidebar cachée par défaut (mode admin != user) */
     #sidebar{ display:none; }
@@ -2800,5 +2853,8 @@
       });
     })();
   </script>
+  <script src="dopamine-engine.js"></script>
+  <script src="dopamine-integration.js"></script>
+  <script src="dopamine-achievements.js"></script>
 </body>
 </html>
