--- a/index.html
+++ b/index.html
@@ -2558,6 +2558,18 @@
                     role="menuitem">
               👁️ Masquer les pastilles vides
             </button>
+            <button type="button"
+                    class="user-actions__item"
+                    id="user-actions-export-sheets"
+                    role="menuitem">
+              📄 Exporter vers Google Sheets
+            </button>
+            <button type="button"
+                    class="user-actions__item hidden"
+                    id="user-actions-refresh-sheets"
+                    role="menuitem">
+              🔄 Actualiser le Google Sheet
+            </button>
             <div class="user-actions__separator" role="presentation"></div>
             <button type="button"
                     class="user-actions__item hidden"
