--- a/index.html
+++ b/index.html
@@ -2611,6 +2611,7 @@
   <script src="./checklist-fix.js"></script>
   <script src="./checklist-editor.js"></script>
   <script src="bilan.js"></script>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script src="app.js"></script>
   <script>
     (function initApp() {
