--- a/index.html
+++ b/index.html
@@ -2564,16 +2564,10 @@
                     role="menuitem">
               📄 Exporter vers Google Sheets
             </button>
-            <button type="button"
-                    class="user-actions__item hidden"
-                    id="user-actions-refresh-sheets"
-                    role="menuitem">
-              🔄 Actualiser le Google Sheet
-            </button>
             <div class="user-actions__separator" role="presentation"></div>
             <button type="button"
-                    class="user-actions__item hidden"
-                    id="install-app-button"
+                    class="user-actions__item"
+                    id="user-actions-toggle-history"
                     data-install-trigger
                     role="menuitem">
               📱 Ajouter à l’écran d’accueil
