--- a/index.html
+++ b/index.html
@@ -2564,6 +2564,12 @@
                     role="menuitem">
               📄 Exporter vers Google Sheets
             </button>
+            <button type="button"
+                    class="user-actions__item"
+                    id="user-actions-stats"
+                    role="menuitem">
+              📊 Statistiques
+            </button>
             <div class="user-actions__separator" role="presentation"></div>
             <button type="button"
                     class="user-actions__item"
